--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,6 +23,10 @@
 
 [[constraint]]
   branch = "master"
+  name = "github.com/DHowett/go-plist"
+
+[[constraint]]
+  branch = "master"
   name = "github.com/maruel/go-fs"
 
 [[constraint]]
