--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -168,11 +168,12 @@ jobs:
     - name: 'Check: go test -race'
       run: go test -race ./...
 
-    - name: "Check: go generate doesn't modify files (posix)"
+    - name: "Check: go generate + go mod tidy doesn't modify files (posix)"
       # TODO(maruel): Find a way to enable this check on Windows.
       if: matrix.os != 'windows-latest'
       run: |
         go generate ./...
+        go mod tidy
         TOUCHED=$(git status --porcelain --ignored)
         if ! test -z "$TOUCHED"; then
           echo "go generate modified these files, please update:"
