Fix ineffassign check

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,7 +89,7 @@ jobs:
       run: golint -set_exit_status ./...
     - name: 'Check: inefficient variable assignment'
       if: always()
-      run: ineffassign .
+      run: ineffassign ./...
     - name: 'Check: staticcheck'
       if: always()
       run: staticcheck ./...
