--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
     # benchmarks. At the end do a quick check to ensure the tests to not leave
     # files in the tree.
   test:
-    name: "test: go${{matrix.gover}}.x/${{matrix.os}}"
+    name: "test: ${{matrix.os}}"
     runs-on: "${{matrix.os}}"
     continue-on-error: true
     defaults:
@@ -29,21 +29,18 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        # Do not forget to bump every 6 months!
-        gover: ["1.19"]
     env:
       PYTHONDONTWRITEBYTECODE: x
     steps:
     - name: Turn off git core.autocrlf
       if: matrix.os == 'windows-latest'
       run: git config --global core.autocrlf false
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 2
-    - uses: actions/setup-go@v3
+    - uses: actions/setup-go@v5
       with:
-        go-version: "~${{matrix.gover}}.0"
-        cache: true
+        go-version-file: go.mod
     - name: 'go install necessary tools'
       if: always()
       run: |
@@ -52,7 +49,9 @@ jobs:
       if: always()
       run: go test -timeout=120s -covermode=count -coverprofile coverage.txt -bench=. -benchtime=1x ./...
       # Don't send code coverage if anything failed to reduce spam.
-    - uses: codecov/codecov-action@v2
+    - uses: codecov/codecov-action@v4
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
     - name: 'Cleanup'
       if: always()
       run: rm coverage.txt
@@ -87,7 +86,7 @@ jobs:
     # to cut on runtime, at the cost of latency. I dislike waiting for results
     # so I prefer to run them in parallel.
   lint:
-    name: "lint: go${{matrix.gover}}.x/${{matrix.os}}"
+    name: "lint: ${{matrix.os}}"
     runs-on: "${{matrix.os}}"
     continue-on-error: true
     defaults:
@@ -100,27 +99,16 @@ jobs:
         # OS-specific code benefits from explicitly linting on macOS and
         # Windows.
         os: [ubuntu-latest, macos-latest, windows-latest]
-        # Do not forget to bump every 6 months!
-        gover: ["1.19"]
     env:
       PYTHONDONTWRITEBYTECODE: x
     steps:
     - name: Turn off git core.autocrlf
       if: matrix.os == 'windows-latest'
       run: git config --global core.autocrlf false
-    - uses: actions/checkout@v3
-    - uses: actions/setup-go@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-go@v5
       with:
-        go-version: "~${{matrix.gover}}.0"
-        cache: true
-    - name: "Debug"
-      run: |
-        echo HOME = $HOME
-        echo GITHUB_WORKSPACE = $GITHUB_WORKSPACE
-        echo PATH = $PATH
-        echo ""
-        echo $ ls -l $HOME/go/bin
-        ls -la $HOME/go/bin
+        go-version-file: go.mod
     - name: 'go install necessary tools'
       if: always()
       run: |
@@ -234,59 +222,26 @@ jobs:
         fi
 
 
-    # Ensure tests pass on oldest supported Go version.
-  old:
-    name: "test: go${{matrix.gover}}/${{matrix.os}}"
-    runs-on: "${{matrix.os}}"
-    continue-on-error: true
-    defaults:
-      run:
-        shell: bash
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        # https://github.com/golang/go/issues/55078
-        # golang.org/x/sys/unix broke on Go versions before 1.17. Not worth
-        # fixing.
-        gover: ['1.17.13']
-    env:
-      PYTHONDONTWRITEBYTECODE: x
-    steps:
-    - name: Turn off git core.autocrlf
-      if: matrix.os == 'windows-latest'
-      run: git config --global core.autocrlf false
-    - uses: actions/checkout@v3
-    - uses: actions/setup-go@v3
-      with:
-        go-version: "=${{matrix.gover}}"
-    - name: 'Check: go test'
-      run: go test -timeout=120s -bench=. -benchtime=1x ./...
-
-
   codeql:
-    name: "codeql: go${{matrix.gover}}.x/${{matrix.os}}"
+    name: "codeql: ${{matrix.os}}"
     runs-on: "${{matrix.os}}"
     continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        # Do not forget to bump every 6 months!
-        gover: ["1.19"]
     permissions:
       security-events: write
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-go@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-go@v5
       with:
-        go-version: "~${{matrix.gover}}.0"
-        cache: true
+        go-version-file: go.mod
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
+      uses: github/codeql-action/init@v3
       with:
         languages: go
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+      uses: github/codeql-action/autobuild@v3
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
+      uses: github/codeql-action/analyze@v3
